# pfmsoft-trips

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: pytest.yaml
changelog.d/templates/: entry_title_template.md.j2  new_fragment.md.j2
dev-docs/: dependencies.md  dev-todo.md  dev_branch_dev_workflow.md  dev_dependencies.md  git-reference.md  github_ci.md  google_style_docstrings.py  project-narrative.md  project-setup.md  project_structure.md  pypi_release.md  release-workflow.md  sphinx_docs.md
docs/source/: conf.py  index.md
docs/source/documentation/: changelog.md  contributing.md  dev-setup.md  license.md
docs/source/documentation/cli/: main.rst
scripts/: clean-pycache.sh  connect-to-github.sh  docs-build.sh  initial-git-setup.sh  venv-reset.sh
src/pfmsoft/trips/airports/: __init__.py
src/pfmsoft/trips/cli/: __init__.py  main_typer.py  translate_cli.py
src/pfmsoft/trips/models/: __init__.py  instant.py  instant_pd.py  trip.py  utc_datetime_validator.py
src/pfmsoft/trips/models/pydantic/: trip.py
src/pfmsoft/trips/snippets/datetime/: __init__.py  aware_datetime_dataclass.py  check_utc.py
src/pfmsoft/trips/snippets/file/: __init__.py  check_file.py
src/pfmsoft/trips/snippets/pydantic/: __init__.py  aware_datetime_pydantic.py  (+1 more)
src/pfmsoft/trips/translate/: __init__.py  pbs_2022_01.py
src/pfmsoft_trips/: __init__.py
src/pfmsoft_trips/cli/: main_typer.py
src/pfmsoft_trips/snippets/: __init__.py
src/pfmsoft_trips/snippets/logging/: logging.py
tests/: conftest.py
tests/pfmsoft_trips/: __init__.py  stub_test.py  test_typer_command_paths.py  test_typer_hash.py  translate_structured_trip_test.py
tests/pfmsoft_trips/snippets/: test_pydantic_aware_datetime.py
tests/pfmsoft_trips/snippets/datetime/: __init__.py  test_aware_datetime.py
tests/pfmsoft_trips/snippets/pydantic/: __init__.py  test_pydantic_aware_datetime.py
tests/pfmsoft_trips/translate/: __init__.py
tests/pfmsoft_trips/translate/pbs_2022_01/: __init__.py  translate_and_compare_test.py  translate_structured_trip_test.py
tests/resources/: __init__.py  models.py
tests/resources/files_1/: ipsum_1.txt
tests/resources/models/: __init__.py  file_comparison.py  file_system_resource.py
tests/resources/pbs_2022_01/structured_trips/: __init__.py
tests/resources/scripts/: __init__.py  generate_data.py
tests/resources/structured_trips/: PBS_BOS_November_2024_20241010125404.page_102_of_103.trip_1_of_4.parsed.structured.json  PBS_BOS_November_2024_20241010125404.page_102_of_103.trip_2_of_4.parsed.structured.json  PBS_BOS_November_2024_20241010125404.page_102_of_103.trip_3_of_4.parsed.structured.json  PBS_BOS_November_2024_20241010125404.page_102_of_103.trip_4_of_4.parsed.structured.json  PBS_BOS_November_2024_20241010125404.page_103_of_103.trip_1_of_3.parsed.structured.json  PBS_BOS_November_2024_20241010125404.page_103_of_103.trip_2_of_3.parsed.structured.json  PBS_BOS_November_2024_20241010125404.page_103_of_103.trip_3_of_3.parsed.structured.json  PBS_PHX_November_2024_20241010130419.page_7_of_261.trip_3_of_5.parsed.structured.json  __init__.py
tests/resources/trips/: __init__.py
tests/resources/trips/pbs_2022_01/: __init__.py
(+19 files in other folders)
